# embed-log

./: .gitignore  AGENTS.md  DIRECTORY_GUIDE.md  FRONTEND.md  INSTALL.md  MERGE.md  README.md  SAMPLE_COMMANDS.md  backlog.md  embed-log.demo.yml  install.sh  pyproject.toml  requirements.txt  run_demo.sh  uninstall.sh
backend/: app.py  cli.py  config.py  parse.py  server.py  slice.py
backend/config/: __init__.py  loader.py  models.py
backend/core/: __init__.py  naming.py  runtime.py
backend/net/: __init__.py  forward_server.py  inject_server.py  ws_server.py
backend/session/: __init__.py  exporter.py  manager.py
backend/sinks/: __init__.py
backend/sources/: __init__.py  base.py  uart.py  udp.py
examples/: embed-log.yml
frontend/: ansi.js  export.js  import.js  index.html  lines.js  main.js  persist.js  selection.js  settings.js  state.js  tabcreate.js  tabs.js  themes.js  tsparse.js  ui.js  viewer.css  ws.js
tests/: test_app_parse_source.py  test_config_loader.py  test_merge_logs.py  test_session_components.py
utils/: inject_log_demo.py  merge_logs.py  sim_messages.txt  udp_log_simulator.py
